// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton rendering renders the expected elements 1`] = `
<span
  aria-label="Test"
  className="IconButton IconButton--medium TestClass"
  id="test"
  onKeyDown={[MockFunction]}
  role="button"
  tabIndex={0}
>
  <SvgIcon
    icon={Object {}}
  />
</span>
`;

exports[`IconButton rendering renders the expected elements if disabled is true 1`] = `
<span
  aria-disabled={true}
  aria-label="Test"
  className="IconButton IconButton--medium"
  id="test"
  onClick={null}
  onKeyDown={null}
  role="button"
  tabIndex={-1}
>
  <SvgIcon
    icon={Object {}}
  />
</span>
`;

exports[`IconButton rendering renders the expected elements when className is not set 1`] = `
<span
  aria-label="Test"
  className="IconButton IconButton--medium"
  id="test"
  onKeyDown={[MockFunction]}
  role="button"
  tabIndex={0}
>
  <SvgIcon
    icon={Object {}}
  />
</span>
`;

exports[`IconButton rendering renders the expected elements when size and tooltipPlacement are set 1`] = `
<span
  aria-label="Test"
  className="IconButton IconButton--large"
  id="test"
  onKeyDown={[MockFunction]}
  role="button"
  tabIndex={0}
>
  <SvgIcon
    icon={Object {}}
  />
</span>
`;

exports[`IconButton rendering renders the expected elements when tooltipText is not set 1`] = `
<span
  aria-label="Test"
  className="IconButton IconButton--medium TestClass"
  id="test"
  onKeyDown={[MockFunction]}
  role="button"
  tabIndex={0}
>
  <SvgIcon
    icon={Object {}}
  />
</span>
`;
